# RobotCar

./: .gitignore  CMakeLists.txt  README.md  lwipopts_main.h
.navigation/: CMakeLists.txt  firstPathFound.c  navigation.c  shortestPath.c
barcode/: CMakeLists.txt  barcode.c  barcode.h  basic_digital.c
encoder/: CMakeLists.txt  encoder.c  encoder.h
irline/: CMakeLists.txt
irline/barcode/: CMakeLists.txt  barcode.c  barcode.h
irline/barcode/archive/: barcode.c  barcode.h  basic_analogue.c
irline/wall_detection/: CMakeLists.txt  detect_wall.c
irline/wallsensor/: CMakeLists.txt  wallsensor.c  wallsensor.h
magnetometer/: CMakeLists.txt  lsm303dlh.h  magnetometer.c  magnetometer.h
main/: CMakeLists.txt  main.c
motor/: CMakeLists.txt  motor.c  motor.h
nav/: CMakeLists.txt  bfs.py  dfs.py  fast_nav.c  navigation.c  navigation.h  ref.py  ref2.py
nav/mapping/: CMakeLists.txt  mapping.c  mapping.h
nav/navigation/: CMakeLists.txt  navigation.c  navigation.h
navigation/: database.h  firstPathFound.c  shortestPath.c
picow/: CMakeLists.txt  lwipopts_main.h
picow/main/: CMakeLists.txt  main.c
picow/mqtt/: CMakeLists.txt  crypto_consts.h  lwipopts.h  mbedtls_config.h  mqtt.c  mqtt.h
picow/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
server/: CMakeLists.txt  cgi.c  cgi.h  htmldata.c  main.c  server.c  ssi.h
server/html_files/: index.shtml
ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
web/: app.py  requirements.txt
web/static/: style.css
web/templates/: index.html
wifi/: CMakeLists.txt  cgi.c  cgi.h  fakemazegrid.c  fakemazegrid.h  htmldata.c  lwipopts.h  makefsdata.py  ssi.c  ssi.h  wifi.c
wifi/html_files/: index.shtml
